objects/ServiceAppointment__x.object
<CustomObject>
    <fields>
        <fullName>ReassignResourceId_c__c</fullName>
        <externalDeveloperName>ReassignResourceId__c</externalDeveloperName>
        <label>ReassignResourceId</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPAccountingIndicatortimesheet_c__c</fullName>
        <externalDeveloperName>SAPAccountingIndicatortimesheet__c</externalDeveloperName>
        <label>SAPAccountingIndicatortimesheet</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_ServiceOrderNumber_c__c</fullName>
        <externalDeveloperName>SAP_ServiceOrderNumber__c</externalDeveloperName>
        <label>SAP Service Order Number</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchedEndTime__c</fullName>
        <externalDeveloperName>SchedEndTime</externalDeveloperName>
        <label>Scheduled End</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SchedStartTime__c</fullName>
        <externalDeveloperName>SchedStartTime</externalDeveloperName>
        <label>Scheduled Start</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceNote__c</fullName>
        <externalDeveloperName>ServiceNote</externalDeveloperName>
        <label>Service Note</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceTerritoryId__c</fullName>
        <externalDeveloperName>ServiceTerritoryId</externalDeveloperName>
        <label>Territory ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCategory__c</fullName>
        <externalDeveloperName>StatusCategory</externalDeveloperName>
        <label>Status Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>CannotComplete</fullName>
                    <label>Cannot Complete</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <label>Canceled </label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Accepted_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Accepted__c</externalDeveloperName>
        <label>StatusDurationMin Accepted</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Canceled_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Canceled__c</externalDeveloperName>
        <label>StatusDurationMin Canceled</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_CannotComplete_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_CannotComplete__c</externalDeveloperName>
        <label>StatusDurationMin CannotComplete</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Completed_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Completed__c</externalDeveloperName>
        <label>StatusDurationMin Completed</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Confirmed_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Confirmed__c</externalDeveloperName>
        <label>StatusDurationMin Confirmed</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Dispatched_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Dispatched__c</externalDeveloperName>
        <label>StatusDurationMin Dispatched</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_None_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_None__c</externalDeveloperName>
        <label>StatusDurationMin None</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_OnSite_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_OnSite__c</externalDeveloperName>
        <label>StatusDurationMin OnSite</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_RejectedByCustomer_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_RejectedByCustomer__c</externalDeveloperName>
        <label>StatusDurationMin RejectedByCustomer</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Scheduled_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Scheduled__c</externalDeveloperName>
        <label>StatusDurationMin Scheduled</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cannot Complete</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Rejected by Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <externalDeveloperName>Subject</externalDeveloperName>
        <label>Subject</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_c__c</fullName>
        <externalDeveloperName>Subsidiary__c</externalDeveloperName>
        <label>Subsidiary</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECHDueDate_c__c</fullName>
        <externalDeveloperName>TECHDueDate__c</externalDeveloperName>
        <label>TECHDueDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECHDueHour_c__c</fullName>
        <externalDeveloperName>TECHDueHour__c</externalDeveloperName>
        <label>TECHDueHour</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TECHNotifyUserId_c__c</fullName>
        <externalDeveloperName>TECHNotifyUserId__c</externalDeveloperName>
        <label>TECHNotifyUserId</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECHPublicGroupSharingName_c__c</fullName>
        <externalDeveloperName>TECHPublicGroupSharingName__c</externalDeveloperName>
        <label>TECHPublicGroupSharingName</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECHWorkOrderOwnerId_c__c</fullName>
        <externalDeveloperName>TECHWorkOrderOwnerId__c</externalDeveloperName>
        <label>TECHWorkOrderOwnerId</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_Date_c__c</fullName>
        <externalDeveloperName>TECH_Date__c</externalDeveloperName>
        <label>TECH Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_Hours_c__c</fullName>
        <externalDeveloperName>TECH_Hours__c</externalDeveloperName>
        <label>TECH Hours</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_Mins_c__c</fullName>
        <externalDeveloperName>TECH_Mins__c</externalDeveloperName>
        <label>TECH Mins</label>
        <length>32768</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TechDueMin_c__c</fullName>
        <externalDeveloperName>TechDueMin__c</externalDeveloperName>
        <label>TechDueMin</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechEarliestStartDate_c__c</fullName>
        <externalDeveloperName>TechEarliestStartDate__c</externalDeveloperName>
        <label>TechEarliestStartDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechEarliestStartHour_c__c</fullName>
        <externalDeveloperName>TechEarliestStartHour__c</externalDeveloperName>
        <label>TechEarliestStartHour</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechEarliestStartMin_c__c</fullName>
        <externalDeveloperName>TechEarliestStartMin__c</externalDeveloperName>
        <label>TechEarliestStartMin</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechSchedEndDate_c__c</fullName>
        <externalDeveloperName>TechSchedEndDate__c</externalDeveloperName>
        <label>TechSchedEndDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechSchedEndHour_c__c</fullName>
        <externalDeveloperName>TechSchedEndHour__c</externalDeveloperName>
        <label>TechSchedEndHour</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechSchedEndMin_c__c</fullName>
        <externalDeveloperName>TechSchedEndMin__c</externalDeveloperName>
        <label>TechSchedEndMin</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechSchedStartDate_c__c</fullName>
        <externalDeveloperName>TechSchedStartDate__c</externalDeveloperName>
        <label>TechSchedStartDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechSchedStartHour_c__c</fullName>
        <externalDeveloperName>TechSchedStartHour__c</externalDeveloperName>
        <label>TechSchedStartHour</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechSchedStartMin_c__c</fullName>
        <externalDeveloperName>TechSchedStartMin__c</externalDeveloperName>
        <label>TechSchedStartMin</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechScheduledRealStartDate_c__c</fullName>
        <externalDeveloperName>TechScheduledRealStartDate__c</externalDeveloperName>
        <label>TechScheduledRealStartDate</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tool_Used_c__c</fullName>
        <externalDeveloperName>Tool_Used__c</externalDeveloperName>
        <label>Tool Used</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserLastAssignedManager_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserLastAssignedManager__c</externalDeveloperName>
        <label>User =Last Assigned Manager?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WO_Territory_c__c</fullName>
        <externalDeveloperName>WO_Territory__c</externalDeveloperName>
        <label>TECH - Work Order Territory ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkOrderCategory_c__c</fullName>
        <externalDeveloperName>WorkOrderCategory__c</externalDeveloperName>
        <label>Work Order Category</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkOrderSubject_c__c</fullName>
        <externalDeveloperName>WorkOrderSubject__c</externalDeveloperName>
        <label>Work Order Subject</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkOrderSubsidiary_c__c</fullName>
        <externalDeveloperName>WorkOrderSubsidiary__c</externalDeveloperName>
        <label>Work Order Subsidiary</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkOrder_c__c</fullName>
        <externalDeveloperName>WorkOrder__c</externalDeveloperName>
        <label>Work Order</label>
        <length>18</length>
        <referenceTo>WorkOrder__x</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>WorkTypeId__c</fullName>
        <externalDeveloperName>WorkTypeId</externalDeveloperName>
        <label>Work Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isClosed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isClosed__c</externalDeveloperName>
        <inlineHelpText>Checked if the SA is closed</inlineHelpText>
        <label>Closed ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDispatched_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isDispatched__c</externalDeveloperName>
        <inlineHelpText>TRUE when status is Dispatched</inlineHelpText>
        <label>Dispatched?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEscalated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isEscalated__c</externalDeveloperName>
        <label>Escalated?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFieldAction_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isFieldAction__c</externalDeveloperName>
        <label>Field Action ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLate_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isLate__c</externalDeveloperName>
        <inlineHelpText>Checked if the Service Appointment is overdue.</inlineHelpText>
        <label>Late?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPostChatterRequiredOnDispatch_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isPostChatterRequiredOnDispatch__c</externalDeveloperName>
        <label>Do Chatter Post on Dispatch</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPreventiveMaintenance_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isPreventiveMaintenance__c</externalDeveloperName>
        <label>Preventive Maintenance ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReassignRequested_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isReassignRequested__c</externalDeveloperName>
        <label>isReassignRequested</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isScheduled_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isScheduled__c</externalDeveloperName>
        <label>Scheduled ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isToolUsed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isToolUsed__c</externalDeveloperName>
        <label>Tool Used?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <label>Service Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Service Appointments</pluralLabel>
</CustomObject>